erDiagram
    COLLEGE ||--o{ USER : "1:N 所属"
    USER ||--o{ AUDIT_LOG : "1:N 操作"
    USER ||--o{ PROJECT : "1:N 申报"
    USER ||--o{ PAPER : "1:N 申报"
    USER ||--o{ PATENT : "1:N 申报"
    USER ||--o{ SOFTWARE : "1:N 申报"
    USER ||--o{ BOOK : "1:N 申报"
    USER ||--o{ AWARD : "1:N 申报"
    USER ||--o{ COMPETITION : "1:N 申报"
    USER ||--o{ COURSE : "1:N 申报"
    USER ||--o{ MESSAGE : "1:N 接收"
    USER ||--o{ NOTICE : "1:N 发布"
    PROJECT ||--o{ ACHIEVE_SHARE : "1:N 共享"
    PAPER ||--o{ ACHIEVE_SHARE : "1:N 共享"
    USER ||--o{ MSG_PREFERENCE : "1:1 偏好"
    COLLEGE ||--o{ ANNUAL_TARGET : "1:N 目标"
    COLLEGE ||--o{ SCORE_RULE : "1:N 规则"
